Fixed no-wrap error on backtick 'verbatim' mode. Fixes #6.

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -627,6 +627,15 @@ ul, ol {
   min-height: 70px;
 }
 
+
+
+/* --- Markdown content formatting --- */
+
+.card .view code {
+  white-space: inherit;
+}
+
+
 /* ======== HISTORY ======== */
 
 #history {
